<resources>
    <string name="app_name">Bus Line App</string>
    <string name="button_login">Login</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_new_account">Registrar-se</string>
    <string name="header_new_user">Novo Usuario</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="button_new_account">Criar Usuario</string>
    <string name="action_about">About</string>
    <string name="new_line_bus">Nova Linha de Onibus</string>
    <string name="label_number_bus">Numero da Linha</string>
    <string name="button_new_busline">Cadastrar Nova Linha</string>
    <string name="button_update_busline">Atualizar Linha</string>
    <string name="new_line">Percurso</string>
    <string name="label_street">Rua</string>
    <string name="button_new_text">+</string>
    <string name="button_delete_text">-</string>
    <string name="label_dev">Vitor Cardoso \nLogan Mantovani \nJhonatan Oliveira \nLuiz Keese \nMilton Ribeiro</string>
    <string name="label_version">Versão - 1.0.0</string>
</resources>
