<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_line_bus"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumberBus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:hint="@string/label_number_bus"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/parent_linear_layout">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_line"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/label_street"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputStreet2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/label_street"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputStreet3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/label_street"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputStreet4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/label_street"/>
            </com.google.android.material.textfield.TextInputLayout>



            <!--<androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btAddLine"
                    style="@style/custom_button2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:onClick="onAddField"
                    android:text="@string/button_new_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btDeleteLine"
                    style="@style/custom_button2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:onClick="onDeleteField"
                    android:text="@string/button_delete_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>-->

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/custom_button"
            android:id="@+id/btCreate"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/button_new_busline"/>

    </LinearLayout>
</ScrollView>